--- a/Api/.env
+++ b/Api/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-DB = mongodb+srv://sagnik:sagnik1234@mycluster.qnzmlwc.mongodb.net/imgDB?retryWrites=true&w=majority
+DB = mongodb+srv://<user>:<password>@mycluster.qnzmlwc.mongodb.net/dbname?retryWrites=true&w=majorit
 JWT_SECRET = sdfghjhgy1234567utuyvtsuyvtastddtya
